--- a/MyFitnessLad/app/src/main/res/layout/activity_history.xml
+++ b/MyFitnessLad/app/src/main/res/layout/activity_history.xml
@@ -4,13 +4,12 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".DisplayIBW">
+    tools:context=".History">
 
     <TextView
-        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/ideal_body_weight"
+        android:text="Meal History"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -20,29 +19,29 @@
         app:layout_constraintVertical_bias="0.085" />
 
     <TextView
-        android:id="@+id/range"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="RANGE"
-        android:textColor="#00F"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/results"
-        app:layout_constraintVertical_bias="0.242" />
-
-    <TextView
-        android:id="@+id/results"
-        android:layout_width="343dp"
-        android:layout_height="251dp"
+        android:id="@+id/historyBox"
+        android:layout_width="366dp"
+        android:layout_height="460dp"
         android:text="N/A"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.358" />
+        app:layout_constraintTop_toBottomOf="@+id/resetHistory"
+        app:layout_constraintVertical_bias="0.371" />
+
+    <Button
+        android:id="@+id/resetHistory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="ResetHistory"
+        android:text="Reset History"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.177" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
